2007-02-14 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: for 2.0: refactoring:
	prepare infrastructure for Form.SubmitDisabledControls feature	 

2007-02-18  Eyal Alaluf <eyala@mainsoft.com>

	* Control.jvm.cs, Control.cs: Move TemplateSourceDirectory to .jvm file.
	* Control.jvm.cs, Page.jvm.cs: Centralize Portlet specific API in Page.jvm
	* Page.cs, Page.jvm.cs, ClientScriptManager.cs: Support for Http callbacks
	  for J2EE portlets.

2007-02-14 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: for 2.0: 
	'__EVENTTARGET' and '__EVENTARGUMENT' hidden fields are 
	registered only once. 	

2007-02-14 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: for 2.0: '__doPostBack' declared as function of form.
	convention to use 'currForm' instead 'myForm'	

2007-02-14 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs:
	* ClientScriptManager.cs:
	including 'webform.js' requires '__doPostBack' on the form be rendered.  

2007-02-14 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs:
	* ClientScriptManager.cs:
	refactoring: 'theForm' variable is always declared on client. 
	'__EVENTTARGET' and '__EVENTARGUMENT' hidden fields is rendered using 
	RegisterHiddenField API. 'WebForm_OnSubmit' declared as function of form. 	

2007-02-14  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Page.cs: fixed OnInit, adding css should throw exception if no header
	present on the page

2007-02-14 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: __doPostBack considers 2.0 features 
	such RegisterOnSubmitStatement

2007-02-14 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs:
	* ClientScriptManager.cs:
	implemented RegisterOnSubmitStatement for 2.0	

2007-02-13 Igor Zelmanovich <igorz@mainsoft.com>

	* ClientScriptManager.cs: EventValidation feature optimization on Callback.

2007-02-13 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: fixed exception handling on Callback at client.

2007-02-08  Marek Habersack  <grendello@gmail.com>

	* Page.cs: Make sure to create specific cultures.
