@@ -1,3 +1,10 @@
+2007-02-19 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* ClientScriptManager.cs:
+	* Control.cs:			 
+	* Page.cs:
+	implemented PostBackOptions.TrackFocus feature.	
+
 2007-02-14 Igor Zelmanovich <igorz@mainsoft.com>
 
 	* Page.cs: for 2.0: refactoring:
